# OpenGL-GLFW-Template

./: .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  cmake-build.sh  compile_commands.json  imgui.ini  main
includes/glad/: glad.c  glad.h
includes/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
includes/glfw/src/: Makefile  cmake_install.cmake
resources/shaders/: basic_vertex.vs  color_fragment.fsh  pbr.fs  pbr.vs  skybox.fs  skybox.vs
src/: camera.h  input_layer.h  kv_storage.h  main.cpp  material.cpp  material.h  math.h  math.inl  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  raw_shaders.h  render_context.h  render_quad.h  shader.cpp  shader.h  skybox_renderer.cpp  skybox_renderer.h  texture.cpp  texture.h
src/imgui/: imgui_impl_opengl3.h
src/math/: dynamic_matrix.h  math_types.h  matrix33.h  matrix34.h  matrix44.h  matrix44.inl  quaternion.h  vector.h
